--- a/packages/hs-home/src/index.less
+++ b/packages/hs-home/src/index.less
@@ -21,9 +21,6 @@ a {
   text-decoration: none;
 }
 
-.radius10 {
-  border-radius: 10px;
-}
 .videocontainer {
   position: relative;
   height: 100%;
@@ -41,6 +38,10 @@ a {
 :where(.btn) {
   width: 60%;
   position: relative;
+  cursor: pointer;
+  .btn__bg {
+    height: 100%;
+  }
   .btn__desc {
     position: absolute;
     top: 50%;
