--- a/packages/hs-home/src/components/swiper/index.less
+++ b/packages/hs-home/src/components/swiper/index.less
@@ -6,14 +6,12 @@
     height: 100%;
     position: relative;
     .slideContainer {
-      padding: 10px;
-      border-radius: 10px;
-      background: #fff;
+      height: 100%;
+      > img {
+        height: 100%;
+      }
     }
     .swiper-slide {
-      img {
-        height: 45vw;
-      }
     }
     .slideDesc {
       position: absolute;
