--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -5,508 +5,198 @@
 // Common
 .Home {
   margin: 0 auto;
-  // banner
-  .banner {
-    position: relative;
-    &__curryrice {
-      position: absolute;
-      bottom: 28%;
-      left: 0;
-    }
+  // 导航
+  .header {
+    margin-top: 53px;
     &__logo {
-      position: absolute;
-      top: 6%;
-      left: 0;
-      transform: translateX(100%);
-      animation: trx0 forwards 1s ease-out 2s;
+      width: 183px;
     }
-    &__line {
-      position: absolute;
-      left: 6%;
-      width: 80%;
-      top: -2%;
-    }
-    &__fat {
-      position: absolute;
-      right: 9%;
-      width: 29%;
-      top: 42%;
-      transform: translateX(300%);
-      animation: trx0 forwards 1s ease-out 2s;
-    }
-    &__spoon {
-      position: absolute;
-      right: -14%;
-      width: 46%;
-      top: 38%;
-      animation: updown infinite linear 2s;
-    }
-
-    &__zero {
-      position: absolute;
-      right: 17%;
-      width: 12%;
-      top: 33%;
-      transform: translateX(300%);
-      animation: trx0 forwards 1s ease-out 2s;
-    }
-    &__currcybox {
-      position: absolute;
-      left: 8%;
-      width: 50%;
-      top: 33%;
-      transform: translateX(300%);
-      animation: trx0 forwards 1s ease-out 2s;
-    }
-
-    // 按钮区域
-    &__guide {
-      position: absolute;
-      bottom: 6%;
-      left: 3%;
-      width: 94%;
+    &__nav {
+      margin-top: 15px;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      .guide__list {
-        padding: 0.2rem 0;
-        width: 48%;
-        background-color: #e60012;
-        border-radius: 10px;
-        margin-bottom: 17px;
-        letter-spacing: 0.2rem;
-        .list__title,
-        .list__dsc {
-          text-align: center;
-          color: #fff;
-        }
-        .list__title {
-          font-weight: bold;
-          font-size: 1.2rem;
-        }
-        .list__dsc {
-          font-size: 0.7rem;
-        }
-        &:last-child {
-          margin: 0 auto;
-        }
-      }
-    }
-
-    // 宣传语
-    &__slogan {
-      position: absolute;
-      top: 1%;
-      left: 28%;
-      font-size: 2rem;
-      color: #5b391b;
-      transform: translateY(-300%) rotateZ(-10deg);
-      animation: slogandown forwards 1s ease-out 2.8s;
-    }
-  }
-
-  // 经典菜谱
-  .classic {
-    position: relative;
-    padding-top: 0.6rem;
-    &__title {
-      color: #691a09;
-      font-size: 2.4rem;
-      padding-top: 0.7rem;
-      padding-bottom: 0.7rem;
-      text-align: center;
-    }
-    &__titlebg {
-      position: absolute;
-      width: 80%;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    &__desc {
-      font-weight: 300;
-      font-size: 0.9rem;
-      color: #5b391b;
-      text-align: center;
-      margin-bottom: 0.8rem;
-    }
-    &__bee {
-      position: absolute;
-      width: 20%;
-      top: -4rem;
-      left: 2%;
-      z-index: 1;
-      animation: beefly infinite linear 3s;
-    }
-    &__chocolate {
-      position: absolute;
-      width: 23%;
-      top: 12%;
-      right: 2%;
-      z-index: 1;
-    }
-    &__chickenrice {
-      position: relative;
-      .chickenrice__desc {
-        position: absolute;
-        top: 4%;
-        left: 0%;
-        width: 100%;
-        text-align: center;
-        font-weight: 400;
-        font-size: 1.7rem;
-        color: #e60012;
-      }
-      .chickenrice__content {
-        width: 93%;
-        position: absolute;
-        top: 14%;
-        left: 50%;
-        transform: translateX(-50%);
-      }
-    }
-  }
-
-  // 花式菜谱
-  .fancy {
-    position: relative;
-    padding-top: 0.6rem;
-    padding-bottom: 1.8rem;
-    background-image: url('../../assets/fancy__bg.png');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    &__title {
-      color: #691a09;
-      font-size: 2.4rem;
-      text-align: center;
-      margin-bottom: 0.7rem;
-      margin-top: -2.4rem;
-    }
-    &__titlebg {
-      width: 98%;
-      margin-top: 3rem;
-    }
-    &__tomato {
-      position: absolute;
-      width: 15%;
-      top: 48%;
-      left: 0%;
-      > img {
-        transition: all ease-in 0.5s;
-      }
-    }
-    &__seefood {
-      position: absolute;
-      width: 23%;
-      top: 83%;
-      right: 0;
-      > img {
-        transition: all ease-in 0.5s;
-      }
-    }
-    &__desc {
-      font-weight: 300;
-      font-size: 0.9rem;
-      color: #5b391b;
-      text-align: center;
-      margin-bottom: 0.8rem;
-    }
-
-    &__swiperwrap {
-      width: 80%;
-      margin-bottom: 1.3rem;
-      .fancy__swipercontainer {
+      align-items: center;
+      &__list {
         position: relative;
-        background: #fff;
-        border-radius: 10px;
-        height: 50vw;
-        .slideContainer {
-          > img {
-            border-radius: 10px;
+        margin-right: 10px;
+        &::after {
+          position: absolute;
+          z-index: 9;
+          left: 0;
+          bottom: 0;
+          content: '';
+          display: block;
+          width: 100%;
+          height: 2px;
+          background: transparent;
+        }
+        &:hover {
+          &::after {
+            background: #d53927;
+          }
+          .nav__sub {
+            display: block;
+          }
+        }
+        &__content {
+          position: relative;
+          z-index: 9;
+          padding: 8px 14px 10px;
+          color: #000000;
+          line-height: 27px;
+          cursor: pointer;
+          font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
+        }
+        .nav__sub {
+          background: #fff;
+          box-shadow: 0px 0px 6px #aaa;
+          border-radius: 10px;
+          display: none;
+          position: absolute;
+          left: 0;
+          top: 0;
+          padding-top: 47px;
+          width: max-content;
+          z-index: 3;
+          &__list {
+            cursor: pointer;
+            &__content {
+              padding: 0 20px;
+              line-height: 50px;
+              font-size: 11px;
+            }
           }
         }
       }
-      .swiper__tips {
-        font-weight: 400;
-        font-size: 1rem;
-        color: #5b391b;
-        text-align: center;
-        margin-top: 0.3rem;
-      }
-      .fancy__prev {
-        position: absolute;
-        width: 7%;
-        top: 41%;
-        z-index: 9;
-        left: -10%;
-      }
-      .fancy__next {
-        position: absolute;
-        width: 7%;
-        top: 41%;
-        z-index: 9;
-        right: -10%;
-      }
     }
+  }
+  // 轮播
+  .banner {
+    position: relative;
+    margin-top: 15px;
+    width: 100vw;
+    height: 40vw;
+    .banner__prev {
+      left: 10%;
+    }
+    .banner__next {
+      right: 10%;
+    }
+    .banner__prev,
+    .banner__next {
+      cursor: pointer;
+      position: absolute;
+      width: 78px;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 9;
+    }
+  }
+
+  // 波浪
+  .wave1 {
+    position: relative;
+    z-index: 1;
+    top: 0px;
+    height: 80px;
+    background-image: url('../../assets/wave.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+    width: 100vw;
   }
 
   // 日式咖喱课堂
   .classroom {
     position: relative;
+    width: 100vw;
+    height: 780px;
+    margin-top: -80px;
+    padding-top: 140px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 2rem;
+    background-image: url('../../assets/classroom_bg.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
     &__title {
-      color: #5b391b;
-      font-size: 2.4rem;
-      text-align: center;
-      margin-bottom: 2.7rem;
-      margin-top: -5.5rem;
-    }
-    &__titlebg1 {
-      width: 65%;
-      margin-top: 3rem;
-      margin-right: auto;
-      margin-left: 0.6rem;
-    }
-    &__bee {
-      z-index: 1;
-      position: absolute;
-      width: 23%;
-      right: 10%;
-      top: 45%;
-      animation: beefly infinite linear 3s;
-    }
-    &__coriander {
-      z-index: 1;
-      position: absolute;
-      width: 16%;
-      left: 0%;
-      top: 34%;
-    }
-    &__cassia {
-      z-index: 1;
-      position: absolute;
-      width: 21%;
-      left: 6%;
-      top: 54%;
-    }
-    &__xianggu {
-      z-index: 1;
-      position: absolute;
-      width: 10%;
-      left: 15%;
-      top: 46%;
-    }
-    &__titlebg2 {
-      width: 55%;
-      margin-left: auto;
-      margin-right: 0.6rem;
-    }
-    &__ricewrap {
-      position: relative;
-      width: 19rem;
-      height: 18rem;
-      margin-top: 4rem;
-      background-image: url('../../assets/ricetips.png');
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-position: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      .classroom__rice {
-        margin: 0 auto;
-        width: 80%;
-        animation: ricerotate infinite linear 14s;
-      }
-    }
-    &__btn {
-      margin-top: 3rem;
-      .btn__desc {
-        color: red;
-      }
+      width: 455px;
     }
 
-    &__content {
-      position: relative;
+    &__book {
+      width: 276px;
+      position: absolute;
+      top: 348px;
+      margin-left: -750px;
+      z-index: 1;
+    }
+    &__tips {
+      width: 1376px;
+      position: absolute;
+      top: 25px;
+      margin-left: 700px;
+    }
+    .btn {
+      position: absolute;
+      bottom: 60px;
+      width: 367px;
+      height: 88px;
+      .icon {
+        width: 68px;
+      }
+      &__desc {
+        font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
+        font-size: 45px;
+      }
+    }
+  }
+
+  // 底部
+  .footer {
+    width: 100vw;
+    height: 382px;
+    background: #e60012;
+    display: flex;
+    padding-top: 97px;
+    justify-content: center;
+    &__block {
+      width: 34%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .footer__title {
+        font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
+        font-size: 39px;
+        color: #fff;
+        letter-spacing: 10px;
+      }
+    }
+    .block__left {
+    }
+    .block__right {
+    }
+    &__channel {
+      display: flex;
+      justify-content: space-evenly;
+      margin-top: 40px;
       width: 100%;
-      .content__block1 {
+      &__list {
+        cursor: pointer;
+        width: 80px;
         position: relative;
-        z-index: 1;
-        padding-left: 2rem;
-        transform: translateX(-100%);
-        background-image: url('../../assets/classroom__block1.png');
-      }
-      .content__block2 {
-        width: 80%;
-        margin-left: auto;
-        margin-top: -1.4rem;
-        padding-left: 5.4rem;
-        transform: translateX(100%);
-        background-image: url('../../assets/classroom__block2.png');
-      }
-      .content__block {
-        transition: all ease-in 1.2s;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        width: 90%;
-        height: 10rem;
-        opacity: 0.7;
-        background-position: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        .content__tips {
-          font-weight: 300;
-          font-size: 0.9rem;
-          color: #5b391b;
-          line-height: 1.4rem;
+        .icon {
+          width: 80px;
+        }
+        .qrcode {
+          position: absolute;
+          top: 0;
+          left: 0;
+          transform: translateX(-150%);
+          width: 200px;
         }
       }
     }
   }
-
-  // 关于百梦多
-  .aboutbmd {
-    background-image: url('../../assets/aboutbmd__bg.png');
-    position: relative;
-    padding-top: 0.6rem;
-    padding-bottom: 2rem;
-    &__title {
-      color: #691a09;
-      font-size: 2.4rem;
-      padding-top: 0.7rem;
-      padding-bottom: 0.7rem;
-      text-align: center;
-    }
-    &__titlebg {
-      position: absolute;
-      width: 80%;
-      top: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    &__brand {
-      margin-top: 0.5rem;
-      .brand__title {
-        background-image: url('../../assets/brand_bg.png');
-        background-repeat: no-repeat;
-        background-size: contain;
-        font-weight: 400;
-        font-size: 1.5rem;
-        color: #e60012;
-        text-align: center;
-        background-position: center;
-        line-height: 4rem;
-        margin-top: 2.5rem;
-      }
-      .brand__videocontainer {
-        border: 0.2rem solid #e60012;
-        border-radius: 10px;
-        padding: 0.8rem;
-        background: #fff;
-        width: 96%;
-        margin: 1rem auto 0;
-      }
-    }
-    &__step1,
-    &__step2,
-    &__step3 {
-      transition: all ease-in 1.5s;
-    }
-    &__step1,
-    &__step3 {
-      transform: translateX(-100%);
-    }
-    &__step2 {
-      transform: translateX(100%);
-    }
-  }
-
-  // 空模块
-  .block {
-    margin-top: -1px;
-  }
-
-  // 波浪
-  .wave {
-    position: relative;
-    top: 1px;
-    height: 3rem;
-    background-image: url('../../assets/wave.png');
-    background-size: contain;
-    background-repeat: repeat-x;
-    background-position: center;
-    animation: move infinite linear 40s;
-    width: 600%;
-  }
-
-  // 关于好侍
-  .abouths {
-    position: relative;
-    &__title {
-      color: #691a09;
-      position: absolute;
-      top: 15%;
-      font-size: 2.4rem;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    &__backhome {
-      position: absolute;
-      top: 83%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-    &__swipercontainer {
-      position: absolute;
-      top: 31%;
-      left: 50%;
-      width: 92%;
-      padding: 1rem 0.2rem 1.6rem;
-      background: #fff;
-      transform: translateX(-50%);
-      .swiper__tips {
-        position: absolute;
-        bottom: 3.5%;
-        color: #5b391b;
-        font-size: 0.7rem;
-        width: 100%;
-        text-align: center;
-        left: 0;
-      }
-    }
-    &__demo {
-      margin-bottom: 0.3rem;
-    }
-    &__titlebg {
-      position: absolute;
-      width: 57%;
-      top: 11%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-  }
-}
-
-.abouths__prev,
-.abouths__next {
-  position: absolute;
-  width: 9%;
-  top: 41%;
-  z-index: 9;
-}
-.abouths__prev {
-  left: -3%;
-}
-
-.abouths__next {
-  right: -3%;
 }
 
 /*
