--- a/packages/hs-home/src/pages/home/pc.less
+++ b/packages/hs-home/src/pages/home/pc.less
@@ -4,23 +4,25 @@
   div.Home {
     width: @containerW;
     // 轮播
-    .banner {
-      margin-left: calc(-50vw + @containerW / 2);
-    }
-
+    .banner ,
     // 波浪
-    .wave1 {
-      left: calc(-50vw + @containerW / 2);
-    }
-
+    .wave ,
     // 日式咖喱课堂
-    .classroom {
-      margin-left: calc(-50vw + @containerW / 2);
-    }
-
+    .classroom,
+     .hotfancy,
+    // 产品介绍
+    .product ,
+     // 波浪
+    .wave1 ,
+    // 关于好侍
+    .abouths ,
     // 底部
     .footer {
       margin-left: calc(-50vw + @containerW / 2);
+    }
+    .fancy__prev,
+    .fancy__next {
+      display: none;
     }
   }
 }
