--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -20,16 +20,95 @@
         width: 5vw;
       }
       .mob__nav {
-        display: block;
         position: absolute;
         width: 100%;
-        height: 700px;
-        background: red;
+        background: #e60012;
         left: 0;
         top: 73px;
         z-index: 2;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 2.5vw;
         &-show {
+          display: flex;
+        }
+        .level-2-container {
+          padding: 0 0 0 2vw;
+          width: 100%;
+          margin-bottom: 2vw;
+        }
+        .level-3-container {
+          padding: 0 0 0 3vw;
+          width: 100%;
+          margin-bottom: 1.5vw;
+        }
+        .level-4-container {
+          padding: 0 0 0 4vw;
+          width: 100%;
+          margin-bottom: 1vw;
+        }
+        .level-1-wrap,
+        .level-2-wrap,
+        .level-3-wrap {
+          width: 100%;
+        }
+        .visible-true {
           display: block;
+        }
+
+        .visible-false {
+          display: none;
+        }
+
+        &__list {
+          background-color: #fff;
+          display: flex;
+          flex-direction: column;
+          width: 96%;
+          padding: 0 7vw 0 3vw;
+          margin: 0 auto 2.5vw;
+          position: relative;
+          .unsub {
+            width: 5vw;
+          }
+          &__title {
+            font-size: 1.14rem;
+            color: #000000;
+          }
+          &__icon {
+            width: 5vw;
+            height: 5vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            > img {
+              width: 2.5vw;
+            }
+          }
+          .level-1,
+          .level-2,
+          .level-3,
+          .level-4 {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            border-radius: 10px;
+          }
+          .level-1 {
+            height: 12vw;
+            .mob__nav__list__title {
+              font-weight: bold;
+            }
+          }
+          .level-2 {
+            font-size: 1.04rem;
+            height: 10vw;
+          }
+          .level-3 {
+            font-size: 0.94rem;
+            height: 8vw;
+          }
         }
       }
     }
@@ -194,6 +273,13 @@
       flex-direction: column;
       align-items: center;
       height: auto;
+      &__desc {
+        margin-top: 0;
+        font-family: Yuanti SC, Yuanti SC;
+        font-weight: 400;
+        font-size: 1rem;
+        color: #7c7c7c;
+      }
       &__btn {
         display: none;
       }
@@ -202,10 +288,13 @@
         width: 59vw;
       }
       &__left {
-        margin-top: 15vw;
+        margin-top: 13vw;
       }
       &__right {
-        margin-top: 5vw;
+        margin-top: 12vw;
+        width: 85%;
+        height: auto;
+        margin-left: 15%;
       }
       &__knowmore {
         width: 44vw;
@@ -221,15 +310,88 @@
         width: 59vw;
       }
       &__more {
-        margin-top: 9vw;
+        display: none;
+      }
+      &__more1 {
+        display: block;
+        margin-top: 14vw;
         width: 44vw;
+      }
+      &__container {
+        margin-top: 9vw;
+        width: 93%;
+        .news__list {
+          margin-top: 0;
+          padding-top: 5vw;
+          .news__type {
+            width: 12vw;
+            font-size: 0.85rem;
+            line-height: 5vw;
+            border-radius: 5px;
+          }
+          .news__date {
+            margin-left: 4vw;
+            font-size: 1rem;
+            font-weight: 400;
+          }
+          .news__desc {
+            width: 49vw;
+            margin-left: auto;
+            font-size: 1rem;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 1;
+            overflow: hidden;
+          }
+        }
       }
     }
 
     // 底部
     .footer {
-      margin-top: 25vw;
+      margin-top: 16vw;
       height: auto;
+      padding-top: 11vw;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 19vw;
+      &__block {
+        margin-top: 9vw;
+        width: auto;
+        .footer__title {
+          font-family: Yuanti SC, Yuanti SC;
+          font-size: 2rem;
+          color: #fff;
+          letter-spacing: 10px;
+        }
+      }
+      &__channel {
+        margin-top: 5vw;
+      }
+
+      .footer__channel__list {
+        width: auto;
+        padding: 0 7vw;
+        position: relative;
+        &:after {
+          content: '';
+          position: absolute;
+          top: 50%;
+          right: 0;
+          transform: translateY(-50%);
+          width: 2px;
+          height: 5vw;
+          background: #fff;
+        }
+        &:last-child {
+          &:after {
+            background: transparent;
+          }
+        }
+        .icon {
+          width: 10vw;
+        }
+      }
     }
   }
   .banner__next,
