--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -365,6 +365,9 @@
       text-align: center;
       line-height: 40px;
     }
+    &__desc-mob {
+      display: none;
+    }
     &__knowmore {
       display: none;
     }
