--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -124,6 +124,17 @@
     .classroom {
       padding-top: 10vw;
       height: 156vw;
+      &__mob1 {
+        position: absolute;
+        top: 20%;
+        left: 10%;
+      }
+      &__mob2 {
+        position: absolute;
+        width: 80vw;
+        top: 20%;
+        left: 24%;
+      }
       &__title {
         width: 59vw;
       }
@@ -274,11 +285,17 @@
       align-items: center;
       height: auto;
       &__desc {
+        display: none;
+      }
+      &__desc-mob {
+        display: block;
         margin-top: 0;
         font-family: Yuanti SC, Yuanti SC;
         font-weight: 400;
         font-size: 1rem;
         color: #7c7c7c;
+        text-align: center;
+        line-height: 2.4rem;
       }
       &__btn {
         display: none;
