--- a/packages/hs-home/src/index.less
+++ b/packages/hs-home/src/index.less
@@ -73,8 +73,9 @@ a {
 
 .totop {
   position: fixed;
+  cursor: pointer;
   bottom: 2rem;
-  right: 0.5rem;
+  right: 2vw;
   color: #e60112;
   font-weight: bold;
   z-index: 9;
