--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -129,6 +129,10 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
+    &__mob1,
+    &__mob2 {
+      display: none;
+    }
     &__title {
       width: 455px;
     }
@@ -180,7 +184,7 @@
       }
       &__showcase {
         margin-top: 85px;
-        width: 85%;
+        width: 92%;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -225,7 +229,7 @@
         width: 508px;
       }
       &__swiperwrap {
-        width: 90%;
+        width: 96%;
         margin-bottom: 32px;
         .fancy__swipercontainer {
           position: relative;
