--- a/packages/hs-home/src/pages/home/pc.less
+++ b/packages/hs-home/src/pages/home/pc.less
@@ -15,9 +15,7 @@
      // 波浪
     .wave1 ,
     // 关于好侍
-    .abouths ,
-    // 底部
-    .footer {
+    .abouths {
       margin-left: calc(-50vw + @containerW / 2);
     }
     .fancy__prev,
