--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -14,11 +14,13 @@
       height: 156vw;
       &__mob1 {
         position: absolute;
+        display: block;
         top: 20%;
         left: 10%;
       }
       &__mob2 {
         position: absolute;
+        display: block;
         width: 80vw;
         top: 20%;
         left: 24%;
