--- a/packages/hs-home/src/pages/home/mobile.less
+++ b/packages/hs-home/src/pages/home/mobile.less
@@ -17,6 +17,10 @@
         display: block;
         top: 20%;
         left: 10%;
+        > img {
+          transition: all 0.8s ease-in cubic-bezier(0.22, 1, 0.36, 1) 1s;
+          transform: translate(-100px, 100px);
+        }
       }
       &__mob2 {
         position: absolute;
@@ -24,6 +28,10 @@
         width: 80vw;
         top: 20%;
         left: 24%;
+        > img {
+          transition: all 0.8s ease-in cubic-bezier(0.22, 1, 0.36, 1) 1.6s;
+          transform: translate(-100px, 100px);
+        }
       }
       &__title {
         width: 59vw;
