--- a/packages/hs-home/src/pages/qrcode/index.less
+++ b/packages/hs-home/src/pages/qrcode/index.less
@@ -4,6 +4,23 @@
   align-items: center;
   &__logo {
     width: 50vw;
-    margin-top: 41.8vw;
+    margin-top: 15vw;
+  }
+  &__follow {
+    width: 54vw;
+    margin-top: 12vw;
+    margin-bottom: 6vw;
+  }
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 9vw;
+    width: 54vw;
+    &__img {
+      margin-bottom: 6vw;
+    }
+    &__desc {
+    }
   }
 }
