--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -1,6 +1,6 @@
-@import './mobile.less';
-@import './pc.less';
-@import './pad.less';
+@import "./mobile.less";
+@import "./pc.less";
+@import "./pad.less";
 
 // Common
 .Home {
@@ -35,7 +35,7 @@
     top: 0px;
     margin-top: -39px;
     height: 40px;
-    background-image: url('../../assets/wave.png');
+    background-image: url("../../assets/wave.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('../../assets/classroom_bg.png');
+    background-image: url("../../assets/classroom_bg.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center center;
@@ -102,7 +102,7 @@
   .hotfancy {
     padding-bottom: 152px;
     width: 100vw;
-    background-image: url('../../assets/hot_bg.png');
+    background-image: url("../../assets/hot_bg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -203,7 +203,7 @@
     z-index: 1;
     top: 0px;
     height: 80px;
-    background-image: url('../../assets/wave1.png');
+    background-image: url("../../assets/wave1.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
@@ -215,7 +215,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('../../assets/product_bg.png');
+    background-image: url("../../assets/product_bg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -379,6 +379,7 @@
       }
     }
     &__more {
+      cursor: pointer;
       margin-top: 65px;
       width: 227px;
     }
