--- a/packages/hs-home/src/pages/prodetail/index.less
+++ b/packages/hs-home/src/pages/prodetail/index.less
@@ -80,6 +80,9 @@
       .prodetail__title {
         margin-bottom: 80px;
       }
+      &__more {
+        cursor: pointer;
+      }
     }
   }
 }
