--- a/packages/hs-home/src/index.less
+++ b/packages/hs-home/src/index.less
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Yuanti SC;
+  // font-family: Yuanti SC;
+  font-family: PingFangSC, PingFang SC;
 }
 
 html {
