feat: add themeFactory

--- a/packages/hs-home/src/index.less
+++ b/packages/hs-home/src/index.less
@@ -6,6 +6,18 @@
   font-family: PingFangSC, PingFang SC;
 }
 
+:root {
+  --btn-border-color: black;
+}
+
+:root[data-theme="fin"] {
+  --btn-border-color: red;
+}
+
+:root[data-theme="edu"] {
+  --btn-border-color: green;
+}
+
 html {
   scroll-behavior: smooth;
 }
