--- a/packages/hs-home/src/pages/footer/pc.less
+++ b/packages/hs-home/src/pages/footer/pc.less
@@ -1,4 +1,12 @@
 // Pc
 @media only screen and (min-width: 1200px) {
   @containerW: 1140px;
+  div.footer {
+    &__links,
+    &__rights {
+      &__container {
+        width: @containerW;
+      }
+    }
+  }
 }
