--- a/packages/hs-home/src/pages/footer/pad.less
+++ b/packages/hs-home/src/pages/footer/pad.less
@@ -1,3 +1,11 @@
 // Pad
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
+  div.footer {
+    &__links,
+    &__rights {
+      &__container {
+        width: 90%;
+      }
+    }
+  }
 }
