--- a/packages/hs-home/src/pages/cookbook/index.less
+++ b/packages/hs-home/src/pages/cookbook/index.less
@@ -25,6 +25,10 @@
         text-align: right;
         padding-right: 40px;
         position: relative;
+        &-checked {
+          background: #e60012;
+          color: #fff;
+        }
         &:hover {
           background: #e60012;
           color: #fff;
