--- a/packages/hs-home/src/pages/cookdetail/mobile.less
+++ b/packages/hs-home/src/pages/cookdetail/mobile.less
@@ -3,7 +3,7 @@
   @containerW: 100%;
   div.cookDetail {
     width: @containerW;
-    padding: 6vw 11.68vw 0;
+    padding: 6vw 3.2vw 0;
     &__container {
       width: auto;
       &__titlegroup {
@@ -61,6 +61,8 @@
           width: 100%;
           &__list {
             &__item {
+              flex-wrap: wrap;
+              padding: 5.33vw 0;
               &__title {
                 padding: 0 2.1vw 0 1vw;
                 font-size: 0.875rem;
@@ -69,6 +71,12 @@
               &__content {
                 font-size: 0.875rem;
                 line-height: 5.37vw;
+              }
+              .cookDetail__container__way__method__list__item__img {
+                width: 100vw;
+                margin-left: 0;
+                max-height: 52vw;
+                margin-top: 2.66vw;
               }
             }
           }
