--- a/packages/hs-home/src/pages/prodetail/index.less
+++ b/packages/hs-home/src/pages/prodetail/index.less
@@ -6,6 +6,19 @@
   .odd-row {
     background: #fafafa;
   }
+  &__coverImage {
+    &__img {
+      margin: 0 auto;
+      width: 900px;
+    }
+    margin-bottom: 36px;
+  }
+  &__brand {
+    cursor: pointer;
+    width: 520px;
+    height: 90px;
+    margin: 0 auto 74px;
+  }
   &__title {
     background: #fdfaf3;
     padding-left: 30px;
