--- a/packages/hs-home/src/pages/prodetail/mobile.less
+++ b/packages/hs-home/src/pages/prodetail/mobile.less
@@ -6,6 +6,17 @@
       font-size: 1rem;
       padding-left: 3.2vw;
     }
+    &__coverImage {
+      margin-bottom: 4vw;
+      .prodetail__coverImage__img {
+        width: 100vw;
+      }
+    }
+    .prodetail__brand {
+      margin: 0 auto 12.53vw;
+      width: 69.33vw;
+      height: 12vw;
+    }
     &__container {
       width: 100%;
       padding: 0 2.8vw;
