--- a/packages/hs-home/src/pages/newslist/mobile.less
+++ b/packages/hs-home/src/pages/newslist/mobile.less
@@ -9,6 +9,13 @@
     }
     &__nav {
       margin: 8vw auto 0;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      &__item {
+        padding: 0;
+        width: 24%;
+        margin-bottom: 5vw;
+      }
     }
     &__content {
       margin: 10.66vw auto 0;
