--- a/packages/hs-home/src/pages/newslist/index.less
+++ b/packages/hs-home/src/pages/newslist/index.less
@@ -17,6 +17,10 @@
     align-items: center;
     justify-content: center;
     margin: 100px auto 0;
+    .active {
+      color: #e60012;
+      font-weight: bold;
+    }
     &__item {
       cursor: pointer;
       text-align: center;
@@ -25,6 +29,10 @@
       color: #333333;
       line-height: 25px;
       border-right: 1px solid #333333;
+      &:hover {
+        color: #e60012;
+        font-weight: bold;
+      }
       &:last-child {
         padding-right: 0;
         border: none;
