--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -159,6 +159,7 @@
         margin-bottom: 90px;
       }
       &__btn {
+        cursor: pointer;
         margin-top: 90px;
         width: 508px;
       }
@@ -310,6 +311,7 @@
     }
     &__btn {
       width: 451px;
+      cursor: pointer;
     }
     &__desc {
       margin-top: 47px;
