--- a/packages/hs-home/src/pages/footer/index.less
+++ b/packages/hs-home/src/pages/footer/index.less
@@ -45,6 +45,9 @@
         font-size: 14px;
         color: #ffffff;
         cursor: pointer;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -75,6 +78,9 @@
           &:last-child {
             border-right: none;
             padding-right: 0;
+          }
+          &:hover {
+            text-decoration: underline;
           }
         }
       }
