--- a/packages/hs-home/src/pages/home/index.less
+++ b/packages/hs-home/src/pages/home/index.less
@@ -377,6 +377,9 @@
           margin-left: 32px;
           font-size: 27px;
           color: #000000;
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
     }
