--- a/packages/hs-home/src/pages/prodetail/mobile.less
+++ b/packages/hs-home/src/pages/prodetail/mobile.less
@@ -15,7 +15,16 @@
     .prodetail__brand {
       margin: 0 auto 12.53vw;
       width: 69.33vw;
-      height: 12vw;
+      line-height: 12vw;
+      font-size: 0.874rem;
+      .prodetail__brand__img {
+        width: 15vw;
+      }
+      &::after {
+        width: 6vw;
+        right: 5vw;
+        height: 3vw;
+      }
     }
     &__container {
       width: 100%;
