--- a/packages/hs-home/src/pages/cookbook/index.less
+++ b/packages/hs-home/src/pages/cookbook/index.less
@@ -9,21 +9,22 @@
     display: flex;
     align-items: center;
     &__container {
-      width: 1140px;
+      width: 1120px;
       margin: 0 auto;
       display: flex;
       align-self: center;
       justify-content: space-between;
       &__list {
         width: 252px;
-        line-height: 96px;
+        line-height: 83px;
         background: #f7f7f7;
         border-radius: 48px;
-        font-size: 24px;
+        font-size: 20px;
         cursor: pointer;
+        font-weight: 600;
         color: #333333;
         text-align: right;
-        padding-right: 40px;
+        padding-right: 63px;
         position: relative;
         &-checked {
           background: #e60012;
@@ -36,10 +37,10 @@
         > img {
           content: "";
           position: absolute;
-          left: -10px;
-          top: -6px;
-          width: 112px;
-          height: 112px;
+          left: -8px;
+          top: -5px;
+          width: 96px;
+          height: 96px;
           background-size: contain;
           background-repeat: no-repeat;
         }
@@ -56,9 +57,9 @@
     &__title {
       margin: 0 auto;
       position: relative;
-      width: 280px;
-      height: 72px;
-      margin-bottom: 60px;
+      width: 224px;
+      height: 58px;
+      margin-bottom: 76px;
       display: flex;
       align-items: center;
       justify-content: space-around;
@@ -66,18 +67,18 @@
       &::after {
         content: "";
         position: absolute;
-        height: 4px;
+        height: 2px;
         background: #e60012;
-        width: 417px;
+        width: 415px;
         top: 50%;
         transform: translateY(-50%);
       }
       &::before {
-        left: 0;
+        left: -30px;
         transform: translateX(-100%);
       }
       &::after {
-        right: 0;
+        right: -30px;
         transform: translateX(100%);
       }
       &__tips {
@@ -86,22 +87,22 @@
         align-items: center;
         &__chinese {
           font-weight: 600;
-          font-size: 32px;
+          font-size: 26px;
           color: #e60012;
         }
         &__english {
-          font-size: 14px;
+          font-size: 11px;
           color: #e60012;
         }
       }
 
       &__fork {
-        width: 50px;
+        width: 40px;
       }
     }
     &__list {
       &__container {
-        width: 1140px;
+        width: 1120px;
         margin: 0 auto;
         display: flex;
         align-items: center;
@@ -116,6 +117,9 @@
           padding: 10px 10px 20px;
           cursor: pointer;
           margin-bottom: 60px;
+          &:nth-child(4n) {
+            margin-right: 0;
+          }
           &:hover {
             .cookbook__goods__item__title {
               color: #ed1b23;
@@ -127,6 +131,15 @@
             box-shadow: 0px 2px 10px 0px rgba(42, 43, 60, 0.14);
             border-radius: 16px;
             margin-bottom: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            & > img {
+              max-width: 100%;
+              border-radius: 16px;
+              max-height: 100%;
+              width: auto;
+            }
           }
           &__title {
             font-weight: 500;
@@ -136,5 +149,8 @@
         }
       }
     }
+  }
+  &__pagination {
+    margin-top: 60px;
   }
 }
