--- a/packages/hs-home/src/pages/cookdetail/index.less
+++ b/packages/hs-home/src/pages/cookdetail/index.less
@@ -8,7 +8,7 @@
     rgba(239, 205, 142, 0.1) 0%,
     rgba(255, 255, 255, 0.1) 100%
   );
-  padding-top: 92px;
+  padding-top: 103px;
   .banner__prev,
   .banner__next {
     position: absolute;
@@ -24,7 +24,7 @@
     right: 0;
   }
   &__container {
-    width: 1140px;
+    width: 1120px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -33,14 +33,14 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 83px;
+      margin-bottom: 40px;
       &__tips1 {
-        margin-bottom: 17px;
+        margin-bottom: 20px;
         position: relative;
         font-weight: 600;
-        font-size: 45px;
+        font-size: 30px;
         color: #784301;
-        line-height: 63px;
+        line-height: 42px;
         &::after,
         &::before {
           content: "";
@@ -61,9 +61,9 @@
       }
       &__tips2 {
         font-weight: 600;
-        font-size: 36px;
+        font-size: 20px;
         color: #e5493d;
-        line-height: 50px;
+        line-height: 28px;
       }
     }
     &__titlegroup {
@@ -86,11 +86,16 @@
         top: 0;
       }
     }
+    &__video {
+      width: 784px;
+      height: 524px;
+      margin-bottom: 80px;
+    }
     &__way {
       width: 100%;
       display: flex;
       flex-direction: column;
-      margin-bottom: 34px;
+      margin-bottom: 99px;
 
       &__material {
         flex: 1;
@@ -107,16 +112,16 @@
             justify-content: space-between;
             line-height: 50px;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 16px;
             color: #221714;
             border-bottom: 1px dashed #221714;
             &__title {
-              padding-left: 56px;
+              padding-left: 84px;
             }
             &__content {
               width: 40%;
-              text-align: center;
-              padding-right: 36px;
+              text-align: left;
+              padding-right: 126px;
             }
           }
         }
@@ -124,6 +129,9 @@
       &__method {
         flex: 1;
         margin-bottom: 80px;
+        &:last-child {
+          margin-bottom: 0;
+        }
         .cookDetail__container__titlegroup {
           &::after {
             background-image: url("../../assets/cookdetail_1.png");
@@ -144,7 +152,7 @@
             }
             &__content {
               font-weight: 500;
-              font-size: 18px;
+              font-size: 16px;
               color: #221714;
               line-height: 38px;
               flex: 1;
@@ -152,7 +160,7 @@
             &__img {
               width: 360px;
               height: 200px;
-              margin-left: 50px;
+              margin-left: 58px;
             }
           }
         }
