--- a/packages/hs-home/src/pages/prodetail/index.less
+++ b/packages/hs-home/src/pages/prodetail/index.less
@@ -7,9 +7,31 @@
     background: #fafafa;
   }
   &__coverImage {
+    padding-top: 24px;
+    height: 648px;
+    background-image: url("../../assets/coverImageBg.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+
     &__img {
       margin: 0 auto;
-      width: 900px;
+      width: 1000px;
+      height: 506px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      > img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+      }
+    }
+    &__name {
+      font-weight: 600;
+      font-size: 28px;
+      color: #333333;
+      line-height: 40px;
+      text-align: center;
     }
     margin-bottom: 36px;
   }
@@ -47,7 +69,7 @@
   }
   &__title {
     background: #fdfaf3;
-    padding-left: 30px;
+    padding-left: 23px;
     line-height: 60px;
     font-weight: 600;
     font-size: 24px;
@@ -64,7 +86,7 @@
     }
   }
   &__container {
-    width: 1140px;
+    width: 1120px;
     margin: 0 auto;
     &__intro {
       margin-bottom: 80px;
