--- a/packages/hs-home/src/pages/productor/index.less
+++ b/packages/hs-home/src/pages/productor/index.less
@@ -9,11 +9,11 @@
   align-items: center;
   // 一级导航
   &__nav {
-    padding-top: 76px;
+    padding-top: 116px;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 49px;
+    margin-bottom: 59px;
     &__item {
       width: 435px;
       height: 156px;
@@ -30,7 +30,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    margin-bottom: 58px;
+    margin-bottom: 79px;
     &__item {
       cursor: pointer;
       line-height: 60px;
@@ -53,8 +53,9 @@
   }
   // 商品区域
   &__container {
+    width: 100%;
     .productor__list {
-      margin-bottom: 75px;
+      margin-bottom: 98px;
       &__title {
         width: 329px;
         margin: 0 auto;
@@ -72,7 +73,9 @@
         padding: 44px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
+        align-items: flex-start;
+        align-content: flex-start;
         &__item {
           cursor: pointer;
           width: 330px;
@@ -81,6 +84,7 @@
           flex-direction: column;
           align-items: center;
           padding-top: 21px;
+          border-bottom: 1px solid #000000;
           &:hover {
             .productor__list__goods__item__detailbtn {
               background-color: #e60012;
@@ -94,12 +98,21 @@
             width: 240px;
             height: 150px;
             margin-bottom: 32px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            & > img {
+              width: auto;
+              max-width: 100%;
+              max-height: 100%;
+            }
           }
           &__title {
             font-family: STYuanti-SC-Bold, STYuanti-SC-Bold;
             font-size: 18px;
             color: #000000;
-            margin-bottom: 6px;
+            margin-bottom: 2px;
+            line-height: 28px;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
@@ -108,8 +121,9 @@
           }
           &__desc {
             font-size: 14px;
+            line-height: 19px;
             color: #000000;
-            margin-bottom: 7px;
+            margin-bottom: 10px;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
