--- a/packages/hs-home/src/pages/cookdetail/index.less
+++ b/packages/hs-home/src/pages/cookdetail/index.less
@@ -161,6 +161,14 @@
               width: 360px;
               height: 200px;
               margin-left: 58px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              & > img {
+                max-width: 100%;
+                max-height: 100%;
+                width: auto;
+              }
             }
           }
         }
